--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 
 <head>
     <title>WebSocket Example</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>WebSocket Communication</h1>
-    <form method="post" class="form">
-        <input type="text" id="playerName" name="name" placeholder="Name" required>
-        <input type="text" id="playerScore" name="score" placeholder="Score" required>
-        <input type="text" id="playerTime" name="time" placeholder="Time" required>
 
-        <!-- <button type="submit" id="submit" class="button">Submit</button> -->
-        <input type="submit" id="submit" class="button">
-    </form>
+    <input type="text" id="playerName" name="name" placeholder="Name" required>
+    <input type="text" id="playerScore" name="score" placeholder="Score" required>
+    <input type="text" id="playerTime" name="time" placeholder="Time" required>
+
+    <!-- <button type="submit" id="submit" class="button">Submit</button> -->
+    <!-- <input type="submit" id="submit" class="button"> -->
+    <div id="submit">Send</div>
+
 
     <script src="web.js"></script>
 </body>
