--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>WebSocket Example</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Websocket Client</title>
 </head>
-
 <body>
     <h1>WebSocket Communication</h1>
 
@@ -13,12 +12,11 @@
     <input type="text" id="playerScore" name="score" placeholder="Score" required>
     <input type="text" id="playerTime" name="time" placeholder="Time" required>
 
-    <!-- <button type="submit" id="submit" class="button">Submit</button> -->
-    <!-- <input type="submit" id="submit" class="button"> -->
-    <div id="submit">Send</div>
+    <button onclick="sendMessage()">Send Message</button>
+    <div id="output"></div>
 
-
-    <script src="web.js"></script>
+    <script src="web.js">
+        import { sendMessage } from "web.js";
+    </script>
 </body>
-
 </html>
