--- a/index.html
+++ b/index.html
@@ -1,51 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Websocket Client</title>
 </head>
+
 <body>
-    <input type="text" id="messageInput" placeholder="Enter a message">
-    <!-- <input type="text" id="playerName" name="name" placeholder="Name">
+    <!-- <input type="text" id="messageInput" placeholder="Enter a message"> -->
+    <input type="text" id="playerName" name="name" placeholder="Name">
     <input type="text" id="playerScore" name="score" placeholder="Score">
-    <input type="text" id="playerTime" name="time" placeholder="Time"> -->
+    <input type="text" id="playerTime" name="time" placeholder="Time">
+
+    <script src="web.js"></script>
 
     <button onclick="sendMessage()">Send Message</button>
     <div id="output"></div>
-
-    <script>
-        const socket = new WebSocket("ws://localhost:8080/ws")
-
-        socket.onopen = (event) => {
-            console.log("WebSocket connection opened");
-        }
-
-        socket.onmessage = (event) => {
-            const output = document.getElementById('output');
-            output.innerHTML += `<p>Received: ${event.data}</p>`;
-        }
-
-        function sendMessage() {
-            const messageInput = document.getElementById("messageInput");
-            /* const nameInput = document.getElementById("playerName");
-            const scoreInput = document.getElementById("playerScore");
-            const timeInput = document.getElementById("playerTime"); */
-
-            const message = messageInput.value;
-            /* const name = nameInput.value;
-            const score = scoreInput.value;
-            const time = timeInput.value; */
-
-            //const messageToSend = JSON.stringify({ name: name.value, score: +score.value, time: +time.value })
-            socket.send(message);
-
-            messageInput.value = "";
-            /* nameInput.value = "";
-            scoreInput.value = "";
-            timeInput.value = ""; */
-        }
-
-    </script>
 </body>
+
 </html>
